--- a/Localization/Translation.csv
+++ b/Localization/Translation.csv
@@ -17,3 +17,9 @@ source,zh_CN,en
 门派,门派,Sect
 English,English,中文
 En,En,中文
+[卡池/手牌]的卡牌总数,[卡池/手牌]的卡牌总数,Total number of cards in [Pool/Hand]
+重置计数器和副职,重置计数器和副职,Reset the counter and side job
+筑基,筑基,Foundation
+金丹,金丹,Virtuoso
+元婴,元婴,Immortality
+化神,化神,Incarnation
