--- a/Localization/Translation.csv
+++ b/Localization/Translation.csv
@@ -23,3 +23,11 @@ En,En,中文
 金丹,金丹,Virtuoso
 元婴,元婴,Immortality
 化神,化神,Incarnation
+Info: 正在校验Python依赖完整性...,Info: 正在校验Python依赖完整性...,Info: Checking Python dependencies...
+Info: Python依赖校验完毕,Info: Python依赖校验完毕,Info: Python dependencies check completed
+Info: 正在安装paddlepaddle...,Info: 正在安装paddlepaddle...,Info: Installing paddlepaddle...
+Info: 正在安装paddleocr...,Info: 正在安装paddleocr...,Info: Installing paddleocr...
+Info: 正在安装pynput...,Info: 正在安装pynput...,Info: Installing pynput...
+Info: 正在安装mss...,Info: 正在安装mss...,Info: Installing mss...
+Info: 正在安装pygetwindow...,Info: 正在安装pygetwindow...,Info: Installing pygetwindow...
+Info: OCR模型下载完成,Info: OCR模型下载完成,Info: OCR models download completed
